1 - New URL for DashboardBase view 2 - New block {% dropdown_user_menu %} and {% dropdown_user_menu_xs %} 3 - Charts on DashboardBase now

--- a/billing/templates/billing/invoice_detail.html
+++ b/billing/templates/billing/invoice_detail.html
@@ -34,12 +34,11 @@
             .stage .col-sm-4 {float: left; width: 33.33%}
             .stage .col-sm-3 {float: left; width: 25%}
             .stage .col-sm-8 {float: left; width: 66.67%}
-            .details-header {display: block !important;}
             .payment.entry > div > div {width: 100%}
             .payment.entry .val {text-align: left}
             .payment.entry .text-right {text-align: right}
-            .payment.entry .visible-xs {display: none !important}
-            #actions, footer, .footer {display: none}
+            .payment.entry .clearfix {height: 20px}
+            .details-header, #actions, footer, .footer, .payment.entry .visible-xs, .show-modal-cash-in, .payment-start {display: none !important}
         }
     </style>
 {% endblock %}
