--- a/static/ikwen/css/dashboard.css
+++ b/static/ikwen/css/dashboard.css
@@ -150,9 +150,9 @@
 .ranking li span:last-child {
     float: right
 }
-#trend-chart {width: 100%;height: 400px; overflow: hidden!important;}
-#trend-chart > div { margin-left: -14px!important; }
-.business-trend {margin-top: 11vh;}
+#earnings-chart {width: 100%;height: 400px; overflow: hidden!important;}
+#earnings-chart > div { margin-left: -14px!important; }
+.earnings-trend {margin-top: 11vh;}
 .pie-chart {clear: both; height: 200px;width: 100%}
 .line-chart {height: 200px; overflow: hidden!important;width: 100%}
 .line-chart > div { margin-left: -24px!important;}
@@ -171,7 +171,7 @@
     .ranking li {padding: 10px 5px;height: 42px;}
     .figure, .figure-lg {text-align: center}
     .payments > div h6, .payments > div a {font-size: 15px}
-    #trend-chart {height: 300px;}
+    #earnings-chart {height: 300px;}
     .line-chart {height: 150px;}
 }
 @media (min-width: 992px) {
