1 - Improvement of display of generic uploader 2 - Improvement in display of simple button PWA install prompt

--- a/core/templates/core/snippets/pwa_promotion/simple_button.html
+++ b/core/templates/core/snippets/pwa_promotion/simple_button.html
@@ -1,5 +1,5 @@
 {% load i18n static %}
-<div class="container-fluid install-promotion simple-button" style="display: none">
+<div class="container-fluid install-promotion has-shade simple-button" style="display: none">
     <div>
         <span class="text-muted pull-left" style="width: 60%; font-size: .9em">
             {% trans "Want easier and faster access? Get the app now." %}
