--- a/core/templates/core/change_object_base.html
+++ b/core/templates/core/change_object_base.html
@@ -35,15 +35,17 @@
                 <input type="hidden" name="label_field" value="{{ label_field }}" />
                 <input type="hidden" name="slug_field" value="{{ slug_field }}" />
                 {% include 'core/snippets/model_admin_form.html' %}
+                <div class="row">
                 {% for media_obj in media_field_list %}
-                <div class="col-sm-4 col-lg-3" style="padding-left: 0; margin-right: 15px">
-                    <div>
-                    {% with media=media_obj %}
-                        {% include 'core/snippets/media_uploader_single.html' %}
-                    {% endwith %}
+                    <div class="col-sm-4 col-lg-3">
+                        <div>
+                        {% with media=media_obj %}
+                            {% include 'core/snippets/media_uploader_single.html' %}
+                        {% endwith %}
+                        </div>
                     </div>
-                </div>
                 {% endfor %}
+                </div>
                 <div class="form-group col-xs-12 col-sm-4 col-md-3" style="clear: both; padding-top: 15px">
                     <button class="btn btn-sm btn-primary btn-block">{% trans "Save" %}</button>
                 </div>
