--- a/static/ikwen/css/pwa.css
+++ b/static/ikwen/css/pwa.css
@@ -7,7 +7,7 @@
         Rules for PWA-related widgets
 */
 
-.install-promotion.simple-button {margin-top: 55px; margin-bottom: 5vh}
+.install-promotion.simple-button {background: #fff;margin-bottom: 5vh;padding: 10px 15px;position: fixed;width: 100%;}
 .install-promotion.simple-button .install-pwa {min-width: 100px; padding-top: 5px; padding-bottom: 5px}
 
 .install-promotion.edge-menu {border-radius: 0; margin-top: 3vh}
