--- a/accesscontrol/templates/accesscontrol/sign_in.html
+++ b/accesscontrol/templates/accesscontrol/sign_in.html
@@ -6,8 +6,7 @@
     {{ block.super }}
     <link rel='stylesheet' href="{% static 'ikwen/css/pwa.css' %}?v=20.8.6" />
     <style  type="text/css">
-        #navbar {background: #fff}
-        #navbar .search, #navbar .navbar-right {display: none}
+        #navbar {display: none}
         label span {font-weight: normal}
         #lg-username {text-transform: lowercase}
         #terms-warning {color: #999; font-size: 11px}
