1 - Fixes in Weblet billing. Better crons, PDF now correctly generated and updated after payment. Better InvoiceDetail Page with improved printable version 2 - New helper function ikwen.core.utils.convert_file_to_utf8

--- a/billing/templates/billing/configuration.html
+++ b/billing/templates/billing/configuration.html
@@ -22,7 +22,7 @@
                     {% include 'core/snippets/model_admin_form.html' %}
                     {% for media_obj in media_field_list %}
                     <div style="padding-left: 0; margin-right: 15px">
-                        <div>
+                        <div class="col-md-5 col-sm-6">
                         {% with media=media_obj %}
                             {% include 'core/snippets/media_uploader_single.html' %}
                         {% endwith %}
